Fix scrollbars styling

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,3 +8,23 @@
 
 @import 'tailwindcss/utilities';
 @import './utilities/index.css';
+
+body {
+	overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+	width: 0px;
+	height: 4px;
+	background-color: var(--light-grey);
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: var(--grey);
+}
+
+@media screen and (min-width: 48em) {
+	::-webkit-scrollbar {
+		width: 4px;
+	}
+}
